--- a/style.css
+++ b/style.css
@@ -16,15 +16,19 @@ body {
 }
 /* Navbar */
 .navbar {
+  position: fixed;
+  right: 0;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: space-between;
-  padding: 15px 8%;
+  padding: 1rem 8%;
   align-items: center;
-  background-color: rgba(#001219, 0.8);
+  background-color: rgba(0, 8, 25, 0.7);
   border-bottom: 1px solid #005f73;
 }
 .navbar .navbar-logo {
-  font-size: 30px;
+  font-size: 2rem;
   color: #fff;
   font-weight: 500;
 }
@@ -35,7 +39,7 @@ body {
 .navbar .navbar-menu a {
   color: #fff;
   display: inline-block;
-  font-size: 16px;
+  font-size: 1rem;
   padding: 10px;
   border-radius: 140px;
   margin: 0 6px;
@@ -45,10 +49,16 @@ body {
   background-color: #ee9b00;
   color: #001219;
 }
+.navbar .navbar-menu a > i {
+  color: #ee9b00;
+}
+.navbar .navbar-menu a:hover > i {
+  color: #001219;
+}
 .navbar .navbar-extra a {
   color: #fff;
   display: inline-block;
-  font-size: 16px;
+  font-size: 2rem;
   padding: 10px;
   border-radius: 140px;
   margin: 0 6px;
@@ -60,16 +70,24 @@ body {
 #menubar {
   display: none;
 }
+/* Navbar end */
 
+/* Welcome Section */
 .welcome {
-  background-size: cover;
-  text-align: center;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  overflow: hidden;
+  align-items: center;
+  background-image: url("aset/earth.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
+.welcome .welcome-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* Welcome End */
 
 .footer {
   position: absolute;
@@ -80,6 +98,53 @@ body {
   right: 0px;
   background-color: #284b63;
   color: #fff;
+}
+
+/* Media Queries */
+
+/* Laptop */
+@media (max-width: 1366px) {
+  html {
+    font-size: 77.7%;
+  }
+}
+/* Tablet */
+@media only screen and (max-width: 1200px) {
+  html {
+    font-size: 70%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  html {
+    font-size: 66.6%;
+  }
+  #menubar {
+    display: inline-block;
+  }
+  .navbar .navbar-menu {
+    position: absolute;
+    top: 100%;
+    right: -100%;
+    background-color: #005f73;
+    width: 30rem;
+    height: 100vh;
+    transition: 0.4s;
+  }
+  .navbar .navbar-menu.active {
+    right: 0;
+  }
+  .navbar .navbar-menu a {
+    margin: 1.6rem;
+    display: block;
+    padding: 1rem;
+    font-size: 1.6rem;
+  }
+}
+/* Mobile */
+@media (max-width: 480px) {
+  html {
+    font-size: 55.5%;
+  }
 }
 
 @media print {
