--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   scroll-behavior: smooth;
   background-color: #001219;
   color: #fff;
+  min-height: 2000vh;
 }
 /* Navbar */
 .navbar {
@@ -24,8 +25,9 @@ body {
   justify-content: space-between;
   padding: 1rem 8%;
   align-items: center;
-  background-color: rgba(0, 8, 25, 0.7);
-  border-bottom: 1px solid #005f73;
+  background-color: rgba(0, 18, 25, 0.9);
+  border-bottom: 1px solid #ee9b00;
+  z-index: 99999;
 }
 .navbar .navbar-logo {
   font-size: 2rem;
@@ -82,15 +84,141 @@ body {
   background-size: cover;
   background-position: center;
 }
-.welcome .welcome-page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.welcome::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 30%;
+  bottom: 0;
+  background: linear-gradient(
+    0deg,
+    rgba(0, 18, 25, 1) 5%,
+    rgba(255, 255, 255, 0) 75%
+  );
 }
+.welcome .welcome-page {
+  padding: 1rem 8%;
+  max-width: 100rem;
+}
+.welcome .welcome-page h1 {
+  font-size: 5rem;
+  text-shadow: 3px 3px 9px rgba(0, 18, 25, 0.5);
+  line-height: 1.2;
+}
+.welcome .welcome-page h1 span {
+  color: #ee9b00;
+}
+.welcome .welcome-page p {
+  font-size: 2rem;
+  margin-top: 1rem;
+  line-height: 1.4;
+  text-shadow: 3px 3px 9px rgba(0, 18, 25, 0.5);
+  font-weight: 300;
+}
+.welcome .welcome-button {
+  display: inline-block;
+  margin: 1rem 0;
+  /* border: 2px solid #001219; */
+  padding: 1rem 3rem;
+  border-radius: 140px;
+  background-color: #ee9b00;
+  color: #001219;
+  font-size: 1.3rem;
+  font-weight: 500;
+  box-shadow: 3px 3px 9px rgba(0, 18, 25, 0.5);
+  transition-duration: 0.3s;
+  transition-property: transform;
+}
+.welcome .welcome-button:hover {
+  transform: scale(1.1);
+}
+
 /* Welcome End */
 
+/* About Me Start */
+.about,
+.skill {
+  padding: 7rem 8% 9rem;
+  border-bottom: 2px solid #00151d;
+}
+.about h2,
+.skill h2 {
+  font-size: 2.5rem;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+.about .about-me {
+  line-height: 1.3;
+  display: flex;
+  /* max-width: 100%; */
+}
+.about .about-me .content {
+  padding-right: 2rem;
+  flex: 1 1 40rem;
+  text-align: justify;
+  font-size: 1.15rem;
+}
+.about .about-me .content h3 {
+  font-size: 1.8rem;
+}
+.about .about-me .content p {
+  font-size: 1.2rem;
+}
+.about .about-me .about-foto {
+  flex: 1 1 1rem;
+}
+.about .about-me .about-foto img {
+  width: 100%;
+}
+/* About Me end */
+
+/* Skill Section Start */
+.skill p {
+  font-size: 1.15rem;
+  font-weight: 400;
+}
+.skill .list {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  flex-direction: row;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+.skill .list img {
+  width: 100px;
+}
+.skill .list .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+  border-radius: 10px;
+  background-color: #000e13;
+  box-shadow: 2px 2px 6px rgb(0, 15, 21);
+  /* css animation */
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+.skill .list .container:hover {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+.skill .list .container .text {
+  padding-top: 1rem;
+}
+
+/* Skill Section End */
+
+/*  */
+
 .footer {
-  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -100,6 +228,8 @@ body {
   color: #fff;
 }
 
+/* css hover animation */
+
 /* Media Queries */
 
 /* Laptop */
@@ -107,11 +237,17 @@ body {
   html {
     font-size: 77.7%;
   }
+  .about .about-me .content {
+    flex: 1 1 70%;
+  }
 }
 /* Tablet */
 @media only screen and (max-width: 1200px) {
   html {
     font-size: 70%;
+  }
+  .about .about-me .content {
+    flex: 1 1 60%;
   }
 }
 @media only screen and (max-width: 768px) {
@@ -139,12 +275,28 @@ body {
     padding: 1rem;
     font-size: 1.6rem;
   }
+  .about .about-me .content {
+    flex: 1 1 50%;
+  }
 }
 /* Mobile */
 @media (max-width: 480px) {
   html {
     font-size: 55.5%;
   }
+  .about .about-me {
+    display: block;
+  }
+  .about .about-me .content {
+    margin-bottom: 1rem;
+  }
+  .about .about-me .about-foto {
+    width: 40%;
+    margin: 0 auto;
+  }
+  /* .about .about .content {
+    flex: 1 1 40rem;
+  } */
 }
 
 @media print {
