updating gallery and css file

--- a/style.css
+++ b/style.css
@@ -181,6 +181,7 @@ body {
   margin-bottom: 1rem;
   font-size: 1.2rem;
 }
+.about .about-me .content p > span,
 .about .about-me .content p > a {
   color: #ee9b00;
 }
@@ -267,12 +268,16 @@ body {
 .gallery .column {
   flex: 33.33%;
   padding: 5px;
+  margin: 1px;
 }
 .gallery .row .column:nth-child(2) {
   transition-delay: 100ms;
 }
 .gallery .row .column:nth-child(3) {
   transition-delay: 200ms;
+}
+.gallery .row:nth-child(3) .column:nth-child(2) {
+  transition-delay: 100ms;
 }
 /* Gallery End */
 
@@ -385,7 +390,7 @@ input[type="submit"]:hover {
 .modal-content {
   margin: auto;
   display: block;
-  width: 60%;
+  width: 45%;
   max-width: 700px;
 }
 
@@ -553,7 +558,7 @@ footer .copyright a {
     flex: 1 1 50%;
   }
   .modal-content {
-    width: 40%;
+    width: 55%;
   }
   .gallery .row {
     flex-direction: column;
