--- a/style.css
+++ b/style.css
@@ -448,7 +448,6 @@ input[type="submit"]:hover {
 /* Footer */
 
 footer {
-  text-align: center;
   left: 0px;
   right: 0px;
   padding: 3rem 0;
@@ -457,6 +456,8 @@ footer {
   color: #fff;
 }
 footer .links {
+  display: flex;
+  justify-content: center;
   padding: 1rem 0;
 }
 footer .links a {
@@ -479,6 +480,8 @@ footer .links a:hover i {
   transition: 0.3s;
 }
 footer .copyright {
+  display: flex;
+  justify-content: center;
   font-size: 1rem;
   padding: 1rem 0;
 }
@@ -590,6 +593,9 @@ footer .copyright a {
   .about .about-me .about-foto {
     width: 40%;
     margin: 0 auto;
+  }
+  footer .links {
+    flex-wrap: wrap;
   }
 }
 
